--- a/src/App.css
+++ b/src/App.css
@@ -15,3 +15,9 @@
 .itemsListBtn {
     margin-bottom: 20px;
 }
+
+.listGroupFixedHeight {
+    min-height: 350px;
+    max-height: 350px;
+    overflow-y: auto;
+}
